--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@types/mocha": "^7.0.2",
 		"@types/mock-require": "^2.0.0",
 		"@types/mongodb": "^3.5.8",
+		"@types/node": "^14.0.5",
 		"@typescript-eslint/eslint-plugin": "^2.11.0",
 		"@typescript-eslint/parser": "^2.11.0",
 		"acorn": "^6.4.1",
