--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"tslint": "eslint --ext .ts,.tsx .",
 		"eslint": "meteor npm run jslint && meteor npm run tslint",
 		"stylelint": "stylelint \"app/**/*.css\" \"client/**/*.css\" \"app/**/*.less\" \"client/**/*.less\" \"ee/**/*.less\"",
+		"typecheck": "tsc --noEmit --skipLibCheck",
 		"deploy": "npm run build && pm2 startOrRestart pm2.json",
 		"postinstall": "node .scripts/npm-postinstall.js",
 		"coverage": "nyc -r html mocha --opts ./mocha.opts",
@@ -68,7 +69,7 @@
 		"@types/mocha": "^7.0.2",
 		"@types/mock-require": "^2.0.0",
 		"@types/mongodb": "^3.5.8",
-		"@types/node": "^14.0.5",
+		"@types/node": "^12.12.44",
 		"@typescript-eslint/eslint-plugin": "^2.11.0",
 		"@typescript-eslint/parser": "^2.11.0",
 		"acorn": "^6.4.1",
